build/log/idf_py_stderr_output_717203
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c: In function 'app_main':
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:378:29: error: expected ')' before ';' token
  378 |     s->set_aec_value(s, 1100;     // 0–1200, adjust as needed (higher = brighter)
      |                     ~       ^
      |                             )
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/main/main.c:379:42: error: expected ';' before '}' token
  379 |     ESP_LOGI(TAG, "Manual exposure set");
      |                                          ^
      |                                          ;
  380 | }
      | ~                                         
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5969: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
